; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_cs_require_lv.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_cs_require_lv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }

@cs_library_val_enable = common dso_local global i64 0, align 8
@CS_REQUIRE_LV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cs_require_lv(%struct.proc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.proc*, align 8
  store %struct.proc* %0, %struct.proc** %3, align 8
  %4 = load i64, i64* @cs_library_val_enable, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %24

7:                                                ; preds = %1
  %8 = load %struct.proc*, %struct.proc** %3, align 8
  %9 = icmp eq %struct.proc* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = call %struct.proc* (...) @current_proc()
  store %struct.proc* %11, %struct.proc** %3, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = load %struct.proc*, %struct.proc** %3, align 8
  %14 = icmp ne %struct.proc* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load %struct.proc*, %struct.proc** %3, align 8
  %17 = getelementptr inbounds %struct.proc, %struct.proc* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @CS_REQUIRE_LV, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %15
  store i32 1, i32* %2, align 4
  br label %24

23:                                               ; preds = %15, %12
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %22, %6
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.proc* @current_proc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
